// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Members: (member) should compile a signature members' 1`] = `
"### signatureMember

▸ **signatureMember**(): \`void\`

#### 返回结果

\`void\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile declaration members' 1`] = `
"### declarationMember

• **declarationMember**: \`string\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile members with getter' 1`] = `
"### getter

• \`get\` **getter**(): \`string\`

#### 返回结果

\`string\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile members with setter' 1`] = `
"### setter

• \`set\` **setter**(\`value\`): \`void\`

#### 参数

| Name | Type |
| :------ | :------ |
| \`value\` | \`string\` |

#### 返回结果

\`void\`

[partial: member.sources]

___
"
`;

exports[`Members: (members) should compile class members' 1`] = `
"## Constructors

[partial: member]

## 属性

[partial: member]

## Accessors

[partial: member]

[partial: member]
"
`;

exports[`Members: (members) should compile module members' 1`] = `
"
"
`;

exports[`Members: (with hideMembersSymbol) should compile members without special symbols 1`] = `
"### signatureMember

**signatureMember**(): \`void\`

#### 返回结果

\`void\`

[partial: member.sources]

___
"
`;
